force-app/main/default/objects/Zendesk__ZendeskLog__c/Zendesk__ZendeskLog__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>LOG-{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Zintegration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>