force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__DateTime__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__DateTime__c</fullName>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>