force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__Description__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>