force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>