force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Log_Level__c</fullName>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>