force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__Method__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Method__c</fullName>
    <label>Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>