force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Request_Body__c</fullName>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>