force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__Response__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Response__c</fullName>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>