force-app/main/default/objects/Zendesk__ZendeskLog__c/fields/Zendesk__Ticket__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zendesk Support Ticket</label>
    <referenceTo>Zendesk__Zendesk_Ticket__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>