force-app/main/default/objects/Zendesk__ZendeskLog__c/recordTypes/Zendesk__Bulk_Sync.recordType-meta.xml
<RecordType>
    <fullName>Zendesk__Bulk_Sync</fullName>
    <active>true</active>
    <label>Bulk Sync</label>
</RecordType>