force-app/main/default/objects/Zendesk__ZendeskLog__c/recordTypes/Zendesk__Callout.recordType-meta.xml
<RecordType>
    <fullName>Zendesk__Callout</fullName>
    <active>true</active>
    <label>Callout</label>
</RecordType>