force-app/main/default/objects/Zendesk__ZendeskLog__c/recordTypes/Zendesk__Ongoing_Sync.recordType-meta.xml
<RecordType>
    <fullName>Zendesk__Ongoing_Sync</fullName>
    <active>true</active>
    <label>Ongoing Sync</label>
</RecordType>