force-app/main/default/objects/Zendesk__ZendeskLog__c/recordTypes/Zendesk__Standard.recordType-meta.xml
<RecordType>
    <fullName>Zendesk__Standard</fullName>
    <active>true</active>
    <label>Standard</label>
</RecordType>