force-app/main/default/objects/Zendesk__ZendeskLog__c/recordTypes/Zendesk__Ticket_Sending.recordType-meta.xml
<RecordType>
    <fullName>Zendesk__Ticket_Sending</fullName>
    <active>true</active>
    <label>Ticket Sending</label>
</RecordType>