force-app/main/default/objects/Zendesk__ZendeskLog__c/recordTypes/Zendesk__TicketLog.recordType-meta.xml
<RecordType>
    <fullName>Zendesk__TicketLog</fullName>
    <active>true</active>
    <label>Ticket Log</label>
</RecordType>