force-app/main/default/objects/Zendesk__ZendeskLog__c/listViews/Zendesk__This_Week.listView-meta.xml
<ListView>
    <fullName>Zendesk__This_Week</fullName>
    <columns>NAME</columns>
    <columns>Zendesk__DateTime__c</columns>
    <columns>Zendesk__ResponseCode__c</columns>
    <columns>Zendesk__Description__c</columns>
    <columns>Zendesk__Method__c</columns>
    <columns>Zendesk__Resource__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Zendesk__Endpoint__c</columns>
    <columns>Zendesk__RequestBody__c</columns>
    <columns>Zendesk__RequestHeader__c</columns>
    <columns>Zendesk__Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>This Week</label>
    <language>en_US</language>
</ListView>