force-app/main/default/objects/Zendesk__ZendeskLog__c/listViews/Zendesk__Ticket_Warning.listView-meta.xml
<ListView>
    <fullName>Zendesk__Ticket_Warning</fullName>
    <columns>Zendesk__DateTime__c</columns>
    <columns>Zendesk__Description__c</columns>
    <columns>Zendesk__RequestBody__c</columns>
    <columns>Zendesk__Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zendesk__Ticket__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>Ticket Warning</label>
    <language>en_US</language>
</ListView>